BusOne02/src/objects/Sent_Email_vod__c.object
<CustomObject>
    <description>This object contains a record of outbound emails sent via the Approved Email service. This is the primary object that will be synced from a client to the server to build and send email.</description>
    <fields>
        <fullName>Account_Email_vod__c</fullName>
        <description>Account_Email_vod captures the email address to which this email was sent.</description>
        <label>To Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account_vod represents the Account to which this Sent_Email_vod record is associated.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Tracking_Mode_vod__c</fullName>
        <description>The field that determines what kind of activity tracking is done on the email.</description>
        <label>Activity Tracking Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anonymous_vod</fullName>
                </value>
                <value>
                    <fullName>Regular_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Document_Views_vod__c</fullName>
        <description>Approved_Document_Views_vod is a roll-up summary which captures the total number of views for any Approved Document associated to this Sent_Email_vod record based on related Email_Activity_vod records.</description>
        <label>Document Views</label>
        <summaryFilterItems>
            <field>Email_Activity_vod__c.Event_type_vod__c</field>
            <operation>equals</operation>
            <value>Viewed_vod</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Activity_vod__c.Sent_Email_vod__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approved_Email_Template_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Approved_Email_Template_vod captures the reference to the Email Template Approved_Document_vod record which was sent as a part of the email payload.</description>
        <label>Email Template</label>
        <referenceTo>Approved_Document_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bcc_vod__c</fullName>
        <description>The list of email addresses which were added as bcc recipients for the Sent Email.</description>
        <label>Bcc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Call record that initiated the Approved Email</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Datetime_vod__c</fullName>
        <description>Capture_Datetime_vod captures the current time of the sent email creation. This is a server datetime if captured online and a mobile time if captured offline.</description>
        <label>Capture Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Case record from which the Approved Email was initiated.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_Count_vod__c</fullName>
        <description>Click_Count_vod is a roll-up summary which captures the total numbers of times the eamil was opened based on related Email_Activity_vod records.</description>
        <label>Total Clicks</label>
        <summaryFilterItems>
            <field>Email_Activity_vod__c.Event_type_vod__c</field>
            <operation>equals</operation>
            <value>Clicked_vod</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Activity_vod__c.Sent_Email_vod__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Clicked_vod__c</fullName>
        <description>Clicked_vod is a formula field which captures if there was at least single click event or not for the sent email.</description>
        <formula>IF(Click_Count_vod__c  &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content_Type_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Content_Type_vod record associated with the Approved_Document_vod record of Email Template.</description>
        <label>Content Type</label>
        <referenceTo>Content_Type_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail_Group_vod represents the detail group to which this Sent_Email_vod record is associated. This will correspond to the Detail Group to which the product (Product_vod) is aligned. If the Product_vod entity is not related to a Detail Group, then this will be NULL.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Sent Email (Detail Group)</relationshipLabel>
        <relationshipName>Sent_Email1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EM_Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The attendee that an email was sent to</description>
        <label>Attendee</label>
        <referenceTo>EM_Attendee_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EM_Event_Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event speaker that the email was sent to</description>
        <label>Event Speaker</label>
        <referenceTo>EM_Event_Speaker_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EM_Event_Team_Member_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event team member that the email was sent to</description>
        <label>Event Team Member</label>
        <referenceTo>EM_Event_Team_Member_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Config_Values_vod__c</fullName>
        <description>Email_Config_Values_vod captures a comma delimited list of text qualified key-value pairs of email configuration values. The data in this field will be enclosed in curly brackets. Typically this will contain selected picklist values (body picklists or subject picklist) and free text strings, and headers, i.e. {&quot;accLname&quot;:&quot;Jones&quot;,&quot;accTitle&quot;:&quot;Prof.&quot;,&quot;accCredentials&quot;:&quot;MD&quot;}</description>
        <label>Email Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Content2_vod__c</fullName>
        <description>Email_Content2_vod captures any overflow from Email_Content_vod.</description>
        <label>Email Content2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Content_vod__c</fullName>
        <description>Email_Content_vod captures the literal email content that was sent.</description>
        <label>Email Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Fragments_vod__c</fullName>
        <description>Email_Fragments_vod captures the IDs of the Email Fragments which were included in the email payload. This will be a comma separated list of SFDC IDs.</description>
        <label>Email Fragments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Sent_Date_vod__c</fullName>
        <description>Email_Sent_Date_vod is the datetime when the MultiChannel Email Engine dispatched the email. This will always be greater than the record&apos;s CreatedDate.</description>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Source_vod__c</fullName>
        <description>Stores the object and field API names of the email.</description>
        <label>Email Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Attendee_Mobile_Id_vod__c</fullName>
        <description>Stores the Mobile ID of the Event Attendee for which the Sent Email created</description>
        <label>Event Attendee Mobile Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event attendee that an email was sent to</description>
        <label>Event Attendee</label>
        <referenceTo>Event_Attendee_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Mobile_Id_vod__c</fullName>
        <description>Stores the Mobile ID of the Event from which the Sent Email was initiated</description>
        <label>Event Mobile Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event that an email was sent in relation to</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Events_Management_Subtype_vod__c</fullName>
        <description>The subtype of the email template</description>
        <formula>TEXT(Approved_Email_Template_vod__r.Events_Management_Subtype_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Events Management Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Msg_vod__c</fullName>
        <description>Failure_Msg_vod captures the specific reason for an email send failures and will only be populated when Sent_Email_vod.Status_vod = Failed_vod. The reasons stored in this field will pertain for document validation errors, i.e. if a Email Template, Email Fragment, or Email Template Fragment fail validation then this field will be populated.</description>
        <label>Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key Message associated with the Approved Document.</description>
        <label>Key Message</label>
        <referenceTo>Key_Message_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date_vod__c</fullName>
        <description>Last_Activity_Date_vod is the datetime of the last activity recorded against this Sent_Email_vod record via Email_Activity_vod records.</description>
        <label>Last Email Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Click_Date_vod__c</fullName>
        <description>Last_Click_Date_vod is a roll-up summary which captures the date of the last time the email was clicked based on related Email_Activity_vod records. Emails can be clicked multiple times.</description>
        <label>Last Click</label>
        <summarizedField>Email_Activity_vod__c.Activity_DateTime_vod__c</summarizedField>
        <summaryFilterItems>
            <field>Email_Activity_vod__c.Event_type_vod__c</field>
            <operation>equals</operation>
            <value>Clicked_vod</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Activity_vod__c.Sent_Email_vod__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Device_vod__c</fullName>
        <description>Last_Device_vod captures the last device used to generate the Sent_Email_vod record. You can use this field to determine what devices are generating Sent_Email_vod records.</description>
        <label>Last Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data_Load_vod</fullName>
                </value>
                <value>
                    <fullName>iPhone_vod</fullName>
                </value>
                <value>
                    <fullName>Mobile_vod</fullName>
                </value>
                <value>
                    <fullName>Online_vod</fullName>
                </value>
                <value>
                    <fullName>Tablet_vod</fullName>
                </value>
                <value>
                    <fullName>Blackberry_vod</fullName>
                </value>
                <value>
                    <fullName>iPad_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Open_Date_vod__c</fullName>
        <description>Last_Open_Date_vod is a roll-up summary which captures the date of the last time the email was opened based on related Email_Activity_vod records. Emails can be opened multiple times.</description>
        <label>Last Open</label>
        <summarizedField>Email_Activity_vod__c.Activity_DateTime_vod__c</summarizedField>
        <summaryFilterItems>
            <field>Email_Activity_vod__c.Event_type_vod__c</field>
            <operation>equals</operation>
            <value>Opened_vod</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Activity_vod__c.Sent_Email_vod__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MC_Capture_Datetime_vod__c</fullName>
        <description>MC_Capture_Datetime_vod captures the capture datetime of the Opt-In MultiChannel_Consent_vod record which allowed this Sent_Email_vod record to pass validation. If there is no Opt-In (Implicit model), then this will be NULL.</description>
        <label>MC Capture Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The medical event that an email was sent in relation to</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Inquiry_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Medical Inquiry record that the email is related to</description>
        <label>Medical Inquiry</label>
        <referenceTo>Medical_Inquiry_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Open_Count_vod__c</fullName>
        <description>Open_Count_vod is a roll-up summary which captures the total number of times the email was opened based on related Email_Activity_vod records.</description>
        <label>Total Opens</label>
        <summaryFilterItems>
            <field>Email_Activity_vod__c.Event_type_vod__c</field>
            <operation>equals</operation>
            <value>Opened_vod</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Activity_vod__c.Sent_Email_vod__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opened_vod__c</fullName>
        <description>Opened_vod is a formula field which captures if the email was opened at least once or not at all.</description>
        <formula>IF( Open_Count_vod__c &gt;0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Email_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If group email functionality is enabled this will provide a link to the parent email record.</description>
        <label>Parent Email</label>
        <referenceTo>Sent_Email_vod__c</referenceTo>
        <relationshipLabel>Related Emails</relationshipLabel>
        <relationshipName>Sent_Email_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Display_vod__c</fullName>
        <description>Product_Display_vod is formula field used as a display field concatenating the Detail_Group_vod and Product_vod fields if they are populated in this manner: &apos;Detail Product | Detail Group&apos;.</description>
        <formula>IF(NOT(ISBLANK(Product_vod__c)), 
IF(NOT(ISBLANK(Detail_Group_vod__c)), Product_vod__r.Name&amp;&quot; | &quot;&amp;Detail_Group_vod__r.Name, Product_vod__r.Name), 
IF(NOT(ISBLANK(Detail_Group_vod__c)), Detail_Group_vod__r.Name,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product_vod represents the product to which this Sent_Email_vod record is associated.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Entity_Type_vod__c</fullName>
        <description>Indicates the type of transaction the receipt was requested from</description>
        <label>Receipt Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multichannel_Consent_vod</fullName>
                </value>
                <value>
                    <fullName>Call_vod</fullName>
                </value>
                <value>
                    <fullName>Medical_Inquiry_vod</fullName>
                </value>
                <value>
                    <fullName>Order_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receipt_Record_Id_vod__c</fullName>
        <description>SFDC ID of the record, or MedInq.Group_Identifier_vod__c if more than one MI</description>
        <label>Receipt Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Transaction_ID_vod__c</fullName>
        <description>Stores the Mobile ID or the SFDC ID of the transaction that initiated the Sent Email</description>
        <label>Related Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Send_Datetime_vod__c</fullName>
        <description>Scheduled_Send_Datetime_vod represents the date time for which the email was scheduled to be sent by User.</description>
        <label>Scheduled Send Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sender_Email_vod__c</fullName>
        <description>Send_Email_vod captures the email address the email was sent from. The value will be driven by Approved_Document_vod.Email_From_Address_vod.</description>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status_vod captures the status of the email delivery. If the value is Failed_vod, then Failure_Msg_vod will be populated with a more specific description of the failure.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled_vod</fullName>
                </value>
                <value>
                    <fullName>Group_vod</fullName>
                </value>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
                <value>
                    <fullName>Pending_vod</fullName>
                </value>
                <value>
                    <fullName>Sent_vod</fullName>
                </value>
                <value>
                    <fullName>Delivered_vod</fullName>
                </value>
                <value>
                    <fullName>Bounced_vod</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed_vod</fullName>
                </value>
                <value>
                    <fullName>Failed_vod</fullName>
                </value>
                <value>
                    <fullName>Marked_Spam_vod</fullName>
                </value>
                <value>
                    <fullName>Dropped_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggestion_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates Email to Suggestion</description>
        <label>Suggestion</label>
        <referenceTo>Suggestion_vod__c</referenceTo>
        <relationshipLabel>Sent Email</relationshipLabel>
        <relationshipName>Sent_Email_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>The Territory of the User at the time the email was sent. If the User and Account are in more than one territory, it uses the first territory from the User that matches a Territory of the Account. If no match between User and Rep, do not populate the Territory on the Sent Email record.</description>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that an email was sent to</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sent_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External id to determine which Sent Email to write the anonymous Email Activity for.</description>
        <externalId>true</externalId>
        <label>VExternal Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid_Consent_Exists_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Valid_Consent_Exists_vod is a system field used override online validation of the Sent_Email_vod record. This will be flagged true when the record is generated by an offline device.</description>
        <label>Valid Consent Exists</label>
        <type>Checkbox</type>
    </fields>
    <label>Sent Email</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{000000000}</displayFormat>
        <label>Sent Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sent Email</pluralLabel>
    <recordTypes>
        <fullName>Account_vod</fullName>
        <active>true</active>
        <description>Record type for those Sent Email originating from My Accounts or the Account detail page</description>
        <label>Account_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLM_vod</fullName>
        <active>true</active>
        <description>Record type for those Sent Email originating from CLM</description>
        <label>CLM_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Call_vod</fullName>
        <active>true</active>
        <description>Record type for those Sent Email originating from Calls</description>
        <label>Call_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_vod</fullName>
        <active>true</active>
        <description>Record type for those Sent Email originating from Case.</description>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>CoBrowse_Invite_vod</fullName>
        <active>true</active>
        <description>Record type for those Sent Email originating for CoBrowse invite</description>
        <label>CoBrowse_Invite_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Double_Opt_In_vod</fullName>
        <active>true</active>
        <description>Recordtype of those sent email records that are used to sent confirmation email for double opt in</description>
        <label>Double_Opt_In_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Receipt_vod</fullName>
        <active>true</active>
        <description>The email is a receipt from a CRM transaction.</description>
        <label>Email_Receipt_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events_Management_vod</fullName>
        <active>true</active>
        <description>Used to store sent email records that were sent from an Event.</description>
        <label>Events_Management_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Event_vod</fullName>
        <active>true</active>
        <description>Record type for those Sent Email originating from Medical Event</description>
        <label>Medical_Event_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Inquiry_vod</fullName>
        <active>true</active>
        <description>Medical Inquiry</description>
        <label>Medical_Inquiry_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>MyInsights_vod</fullName>
        <active>true</active>
        <description>Record Type for those Sent Email originating from MyInsights</description>
        <label>MyInsights_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remote_Meeting_vod</fullName>
        <active>true</active>
        <description>For Remote Meetings</description>
        <label>Remote_Meeting_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suggestion_vod</fullName>
        <active>true</active>
        <description>Record type for those Sent Email originating from Suggestions</description>
        <label>Suggestion_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>